Update to SpringBoot 3.1.5 and Java 17